# shd

./: .gitignore  README.md
firmware/fx2/smini1/: CMakeLists.txt  board_specific.c  fpga_load.c  fpga_rev2.c  fpga_rev2.h  smini_common.c  smini_main.c  smini_regs.h  usb_descriptors.a51
host/: CMakeLists.txt  LICENSE  README.md  shd.pc.in
host/cmake/Modules/: NSIS.InstallOptions.ini.in  NSIS.template.in  SHDBuildInfo.cmake  SHDComponent.cmake  SHDConfig.cmake.in  SHDConfigVersion.cmake.in  SHDGlobalDefs.cmake  SHDPackage.cmake  SHDPython.cmake  SHDUnitTest.cmake  SHDVersion.cmake
host/cmake/Toolchains/: arm_cortex_a8_cross.cmake
host/cmake/debian/: NetworkManager-SMINI  README.Debian  changelog  control  copyright  libshd-dev.install  libshd003.install  libshd003.shlibs  postinst.in  preinst.in  prerm.in  rules  shd-host.dirs  shd-host.install  shd-host.limits  shd-host.postinst  shd-host.sysctl  watch
host/cmake/msvc/: erllc_shd_b100.inf  erllc_shd_b200.inf  erllc_shd_b200_reinit.inf  erllc_shd_b200mini.inf  erllc_shd_b205mini.inf  erllc_shd_makecat.cdf  erllc_shd_smini1.inf
host/cmake/redhat/: post_install.in  pre_install.in  pre_uninstall.in
host/docs/: CMakeLists.txt  Doxyfile.in  build.dox  c_api.dox  calibration.dox  coding.dox  configuration.dox  converters.dox  dboards.dox  devices.dox  general.dox  gpio_api.dox  gpsdo.dox  gpsdo_b2x0.dox  gpsdo_x3x0.dox  identification.dox  images.dox  install.dox  mainpage.dox.in  multiple.dox  ni_rio_kernel.dox  octoclock.dox  octoclock_firmware_burner.1  rd_testing.dox  shd.dox  shd_cal_rx_iq_balance.1  shd_cal_tx_dc_offset.1  shd_cal_tx_iq_balance.1  shd_config_info.1  shd_find_devices.1  shd_image_loader.1  shd_images_downloader.1  shd_semvar.dox  shd_smini_probe.1  smini1.dox  smini2.dox  smini2_card_burner.1  smini_b100.dox  smini_b200.dox  smini_e1x0.dox  (+8 more)
host/examples/: CMakeLists.txt  benchmark_rate.cpp  gpio.cpp  latency_test.cpp  network_relay.cpp  rx_ascii_art_dft.cpp  rx_multi_samples.cpp  rx_samples_c.c  rx_samples_to_file.cpp  rx_samples_to_udp.cpp  rx_timed_samples.cpp  sync_to_gps.cpp  test_clock_synch.cpp  test_dboard_coercion.cpp  test_messages.cpp  test_pps_input.cpp  test_timed_commands.cpp  twinrx_freq_hopping.cpp  tx_bursts.cpp  tx_samples_c.c  tx_samples_from_file.cpp  tx_timed_samples.cpp  tx_waveforms.cpp  txrx_loopback_to_file.cpp
host/examples/init_smini/: CMakeLists.txt  README  init_smini.cpp
host/include/: CMakeLists.txt  config.h.in  shd.h
host/include/shd/: CMakeLists.txt  build_info.hpp  config.h  config.hpp  convert.hpp  deprecated.hpp  device.hpp  device3.hpp  error.h  exception.hpp  image_loader.hpp  property_tree.hpp  property_tree.ipp  stream.hpp  version.hpp.in
host/lib/: CMakeLists.txt  build_info.cpp  deprecated.cpp  device.cpp  device3.cpp  error_c.cpp  exception.cpp  image_loader.cpp  property_tree.cpp  shd.rc.in  stream.cpp  version.cpp
host/lib/convert/: CMakeLists.txt  convert_common.hpp  convert_fc32_item32.cpp  convert_impl.cpp  convert_item32.cpp  convert_pack_sc12.cpp  convert_unpack_sc12.cpp  convert_with_neon.cpp  convert_with_tables.cpp  gen_convert_general.py  sse2_fc32_to_sc16.cpp  sse2_fc32_to_sc8.cpp  sse2_fc64_to_sc16.cpp  sse2_fc64_to_sc8.cpp  sse2_sc16_to_fc32.cpp  sse2_sc16_to_fc64.cpp  sse2_sc16_to_sc16.cpp  sse2_sc8_to_fc32.cpp  sse2_sc8_to_fc64.cpp
host/lib/experts/: CMakeLists.txt  expert_container.cpp  expert_container.hpp  expert_factory.cpp  expert_factory.hpp  expert_nodes.hpp
host/lib/ic_reg_maps/: CMakeLists.txt  common.py
host/lib/rfnoc/: CMakeLists.txt  block_ctrl_base.cpp  block_ctrl_base_factory.cpp  block_ctrl_impl.cpp  block_id.cpp  blockdef_xml_impl.cpp  ctrl_iface.cpp  ctrl_iface.hpp  ddc_block_ctrl_impl.cpp  dma_fifo_block_ctrl_impl.cpp  duc_block_ctrl_impl.cpp  graph_impl.cpp  graph_impl.hpp  legacy_compat.cpp  legacy_compat.hpp  node_ctrl_base.cpp  radio_ctrl_impl.cpp  radio_ctrl_impl.hpp  rate_node_ctrl.cpp  rx_stream_terminator.cpp  rx_stream_terminator.hpp  scalar_node_ctrl.cpp  sink_block_ctrl_base.cpp  sink_node_ctrl.cpp  source_block_ctrl_base.cpp  source_node_ctrl.cpp  stream_sig.cpp  tick_node_ctrl.cpp  tx_stream_terminator.cpp  tx_stream_terminator.hpp  utils.hpp  wb_iface_adapter.cpp  wb_iface_adapter.hpp  xports.hpp
host/lib/smini/: CMakeLists.txt  dboard_base.cpp  dboard_ctor_args.hpp  dboard_eeprom.cpp  dboard_eeprom_c.cpp  dboard_id.cpp  dboard_iface.cpp  dboard_manager.cpp  fe_connection.cpp  gps_ctrl.cpp  gpsd_iface.cpp  gpsd_iface.hpp  mboard_eeprom.cpp  (+5 more)
host/tests/: CMakeLists.txt  addr_test.cpp  block_id_test.cpp  blockdef_test.cpp  buffer_test.cpp  byteswap_test.cpp  cast_test.cpp  chdr_test.cpp  convert_test.cpp  device3_test.cpp  dict_test.cpp  eeprom_c_test.c  error_c_test.cpp  error_test.cpp  expert_test.cpp  fe_conn_test.cpp  fp_compare_delta_test.cpp  fp_compare_epsilon_test.cpp  gain_group_test.cpp  graph.hpp  graph_search_test.cpp  math_test.cpp  module_test.cpp  msg_test.cpp  nocscript_common.hpp  nocscript_expr_test.cpp  nocscript_parser_test.cpp  node_connect_test.cpp  property_test.cpp  ranges_c_test.c  ranges_test.cpp  rate_node_test.cpp  sensors_c_test.c  sid_t_test.cpp  sph_recv_test.cpp  sph_send_test.cpp  stream_sig_test.cpp  string_vector_c_test.c  subdev_spec_c_test.c  subdev_spec_test.cpp  (+3 more)
host/utils/: CMakeLists.txt  b2xx_fx3_utils.cpp  converter_benchmark.cpp  converter_benchmark.py  fx2_init_eeprom.cpp  octoclock_burn_eeprom.cpp  octoclock_firmware_burner.cpp  query_gpsdo_sensors.cpp  shd-smini.rules  shd_cal_rx_iq_balance.cpp  shd_cal_tx_dc_offset.cpp  shd_cal_tx_iq_balance.cpp  shd_config_info.cpp  shd_find_devices.cpp  shd_image_loader.cpp  shd_images_downloader.py.in  shd_smini_probe.cpp  smini2_card_burner_gui.py  smini2_recovery.py  smini_burn_db_eeprom.cpp  smini_burn_mb_eeprom.cpp  smini_cal_utils.hpp  smini_e3x0_network_mode.cpp  smini_n2xx_net_burner.py  smini_n2xx_net_burner_gui.py  smini_n2xx_simple_net_burner.cpp  smini_x3xx_fpga_burner.cpp
images/: .gitignore  CMakeLists.txt  Makefile  README.md  create_imgs_package.py  make_zip.sh  populate_images.py  shdimgs.py
(+809 files in other folders)
